Fixed many things