@@ -27,16 +27,27 @@
  */
 package id.my.mdn.kupu.core.reporting.jasperreports;
 
-import id.my.mdn.kupu.core.local.service.ActiveLocale;
+import com.itextpdf.text.Document;
+import com.itextpdf.text.DocumentException;
+import com.itextpdf.text.pdf.PdfCopy;
+import com.itextpdf.text.pdf.PdfImportedPage;
+import com.itextpdf.text.pdf.PdfReader;
 import id.my.mdn.kupu.core.reporting.ds.ReportDataSource;
+import id.my.mdn.kupu.core.reporting.exception.ReportDeserializationException;
 import id.my.mdn.kupu.core.reporting.exception.ReportFillingException;
+import id.my.mdn.kupu.core.reporting.model.CompiledReportingJob;
 import id.my.mdn.kupu.core.reporting.service.ReportingJobQueue;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.persistence.EntityManagerFactory;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.logging.Level;
@@ -44,7 +55,9 @@ import java.util.logging.Logger;
 import net.sf.jasperreports.engine.JRDataSource;
 import net.sf.jasperreports.engine.JRException;
 import net.sf.jasperreports.engine.JRParameter;
+import net.sf.jasperreports.engine.JasperExportManager;
 import net.sf.jasperreports.engine.JasperFillManager;
+import net.sf.jasperreports.engine.JasperPrint;
 import net.sf.jasperreports.engine.JasperRunManager;
 import net.sf.jasperreports.engine.export.ooxml.JRXlsxExporter;
 import static net.sf.jasperreports.engine.query.EjbqlConstants.PARAMETER_JPA_ENTITY_MANAGER;
@@ -60,22 +73,79 @@ public class ReportFiller {
 
     @Inject
     private ReportingJobQueue jobQueue;
-    
-    @Inject
-    private ActiveLocale activeLocale;
 
     public void fillAsPdf(InputStream templateInputStream, Map<String, Object> parameters,
             ReportDataSource dataSource, OutputStream outputStream) throws ReportFillingException {
-        
+
         try {
-            parameters.put(JRParameter.REPORT_LOCALE, new Locale("in", "ID"));
-            JasperRunManager.runReportToPdfStream(templateInputStream, outputStream, 
+            parameters.put(JRParameter.REPORT_LOCALE, Locale.of("in", "ID"));
+            JasperRunManager.runReportToPdfStream(templateInputStream, outputStream,
                     parameters, (JRDataSource) dataSource.get());
         } catch (JRException ex) {
             throw new ReportFillingException(ex);
         } finally {
+            System.err.println("SELEK APTER PIL PDF");
             jobQueue.clear();
             jobQueue.setBusy(false);
+        }
+    }
+
+    private InputStream deserializeTemplate(byte[] compiledTemplate)
+            throws ReportDeserializationException {
+        ByteArrayInputStream bis = new ByteArrayInputStream(compiledTemplate);
+        return bis;
+    }
+
+    public void fillAsCompositePdf(OutputStream outputStream, List<CompiledReportingJob> jobs) throws ReportDeserializationException {
+        try {
+            List<JasperPrint> jasperPrints = new ArrayList<>();
+            for (CompiledReportingJob job : jobs) {
+                Map<String, Object> parameters = job.getParameters();
+                parameters.put(JRParameter.REPORT_LOCALE, Locale.of("in", "ID"));
+                jasperPrints.add(
+                        JasperFillManager.fillReport(
+                                deserializeTemplate(job.getCompiledTemplate()),
+                                parameters,
+                                (JRDataSource) job.getDataSource().get()
+                        )
+                );
+            }
+            exportCombine(outputStream, jasperPrints);
+        } catch (JRException ex) {
+            Logger.getLogger(ReportFiller.class.getName()).log(Level.SEVERE, null, ex);
+        } finally {
+            jobQueue.clear();
+            jobQueue.setBusy(false);
+        }
+    }
+
+    public void exportCombine(OutputStream output, List<JasperPrint> jasperPrints) {
+        try {
+            Document document = new Document();
+            PdfCopy copy = new PdfCopy(document, output);
+            document.open();
+            for (JasperPrint filledReport : jasperPrints) {
+                ByteArrayOutputStream baos = new ByteArrayOutputStream();
+                export(baos, filledReport);
+                PdfReader reader = new PdfReader(baos.toByteArray());
+                int pages = reader.getNumberOfPages();
+                for (int i = 1; i <= pages; i++) {
+                    PdfImportedPage page = copy.getImportedPage(reader, i);
+                    copy.addPage(page);
+                }
+            }
+
+            document.close();
+        } catch (DocumentException | IOException ex) {
+            Logger.getLogger(ReportExporter.class.getName()).log(Level.SEVERE, null, ex);
+        }
+    }
+
+    public void export(OutputStream outputStream, JasperPrint jasperPrint) {
+        try {
+            JasperExportManager.exportReportToPdfStream(jasperPrint, outputStream);
+        } catch (JRException ex) {
+            Logger.getLogger(ReportExporter.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
 
@@ -99,7 +169,11 @@ public class ReportFiller {
 
         try {
             JRXlsxExporter exporter = new JRXlsxExporter();
-            exporter.setExporterInput(new SimpleExporterInput(JasperFillManager.fillReport(templateInputStream, parameters, (JRDataSource) dataSource.get())));
+            exporter.setExporterInput(
+                    new SimpleExporterInput(
+                            JasperFillManager.fillReport(templateInputStream, parameters, (JRDataSource) dataSource.get())
+                    )
+            );
             exporter.setExporterOutput(new SimpleOutputStreamExporterOutput(os));
             exporter.exportReport();
         } catch (JRException ex) {
